# document-crawler

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run_crawler.py
app/application/use_cases/: __init__.py  crawl.py  search.py
app/config/: config.py
app/domain/entities/: __init__.py  document.py
app/domain/value_objects/: __init__.py  file_hash.py
app/infrastructure/crawler/: __init__.py  archives.py  file_crawler.py  interfaces.py
app/infrastructure/database/: __init__.py  models.py  repository.py
app/infrastructure/logger/: decorators.py  enums.py  handlers.py  interfaces.py  processors.py  renderers.py
app/infrastructure/parsers/: __init__.py  base_parser.py  doc_parser.py  docx_parser.py  factory.py  interfaces.py  pdf_parser.py  txt_parser.py  xls_parser.py  xlsx_parser.py
app/utils/: metaclasses.py
tests/: crawled_files.csv  create_test_archive.py  test_basic.py
tests/fixtures/samples/: sample_1.docx  sample_1.json  sample_1.md  sample_1.txt  sample_1.xlsx  sample_2.docx  sample_2.json  sample_2.md  sample_2.txt  sample_2.xlsx  sample_3.docx  sample_3.json  sample_3.md  sample_3.txt  sample_3.xlsx  sample_4.docx  sample_4.json  sample_4.md  sample_4.txt  sample_4.xlsx  sample_5.docx  sample_5.json  sample_5.md  sample_5.txt  sample_5.xlsx
